--- a/Exam Assignments/main.tex
+++ b/Exam Assignments/main.tex
@@ -56,4 +56,10 @@
 \newpage
 \subfile{Chapters/04/04.tex}
 
+\newpage
+\subfile{Chapters/06/06.tex}
+
+\newpage
+\subfile{Chapters/07/07.tex}
+
 \end{document}
