--- a/Exam Assignments/main.tex
+++ b/Exam Assignments/main.tex
@@ -11,6 +11,7 @@
 \usepackage{tikz}
 \usetikzlibrary{positioning}
 \usepackage{enumitem}
+\usepackage{graphicx}
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
@@ -64,5 +65,8 @@
 
 \newpage
 \subfile{Chapters/08/08.tex}
+
+\newpage
+\subfile{Chapters/09/09.tex}
 
 \end{document}
